# House

gui/: CMakeCache.txt  CMakeLists.txt  client.cpp  deta.db  dialog.cpp  dialog.h  extern.cpp  extern.h  frame.cpp  frame.h  gui_main.cpp  gui_main.h  itemdata.h  listviewbox.cpp  listviewbox.h  mythread.cpp  mythread.h  panel.cpp  panel.h  printing.cpp  printing.h  test.htm  wxclient.cpp  wxclient.h
gui/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  deta.db  fileowner.db
gui/sqlite/: create.cpp  create.h  main.cpp  n
